# andromeda-galaxy

./: Cargo.toml  Dockerfile  env-example
src/: main.rs
src/controllers/: elastic_controller.rs  ethers_controller.rs  mod.rs
src/repositories/: elastic_repository.rs  ethers_repository.rs  http_client.rs  mod.rs  redis_repository.rs
src/services/: elasticsearch_service.rs  go_plus.rs  mod.rs
src/services/contract/: mod.rs
src/services/elastic/: get_erc20_contracts_service.rs  get_labels_service.rs  get_transactions_service.rs  mod.rs
src/services/ethers/: apply_rpc.rs  apply_rpc_service.rs  call_functions_service.rs  get_logs_service.rs  listen_contract_event_service.rs  listen_deploy_erc20_contracts_service.rs  mod.rs
src/services/etherscan/: mod.rs
src/utils/: abi_utils.rs  bytecode_utils.rs  mod.rs
