[package]
name = "andromeda-galaxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ethers = {version = "2.0.14",features = ["ws","rustls"]}
actix-web = "4.9.0"
actix-rt = "2.8.0"
actix-cors = "0.7.0"

