[package]
name = "andromeda-galaxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ethers = {version = "2.0.14",features = ["ws","rustls"]}
actix-web = "4.9.0"
redis = "0.27.6"
deadpool-redis = "0.18.0"
futures = "0.3.31"
dotenv = "0.15.0"
elasticsearch = "8.16.0-alpha.1"
thiserror = "2.0.7"
log = "0.4"
hex = "0.4.3"
env_logger = "0.11.5"
